--- a/FeebasBot/FeebasBot/FeebasBot.csproj
+++ b/FeebasBot/FeebasBot/FeebasBot.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="Classes\Bot\Ataque.cs" />
     <Compile Include="Classes\Bot\Bot.cs" />
+    <Compile Include="Classes\Bot\Looting.cs" />
     <Compile Include="Classes\Bot\Pesca.cs" />
     <Compile Include="Classes\Funcoes\DalHelper.cs" />
     <Compile Include="Classes\Funcoes\FormsV.cs" />
