--- a/FeebasBot/FeebasBot/FeebasBot.csproj
+++ b/FeebasBot/FeebasBot/FeebasBot.csproj
@@ -155,6 +155,12 @@
     <Compile Include="Classes\Funcoes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Funcoes\win32.cs" />
+    <Compile Include="Telas\Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Info.Designer.cs">
+      <DependentUpon>Info.cs</DependentUpon>
+    </Compile>
     <Compile Include="Telas\Moves.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +188,9 @@
     </Compile>
     <EmbeddedResource Include="cavebot.sqlite">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Info.resx">
+      <DependentUpon>Info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Telas\Moves.resx">
       <DependentUpon>Moves.cs</DependentUpon>
